@startuml
abstract "states::State" as C_0015764854148892732305
abstract C_0015764854148892732305 {
+State(Game & game) : void
+~State() constexpr = default : void
..
{abstract} +GetName() = 0 : Name
{abstract} +HandleCommand(input::Command command) = 0 : void
{abstract} +operator basic_json() const = 0 : json
__
#game_ : Game &
}
class "states::SetupBot" as C_0002674565606331333902
class C_0002674565606331333902 {
+SetupBot(Game & game) : void
+SetupBot(Game & game, const json & j) : void
..
+GetName() : Name
+HandleCommand(input::Command command) : void
+operator basic_json() const : json
__
{static} +kName : const Name
}
class "states::SetupField" as C_0011306398176730384307
class C_0011306398176730384307 {
+SetupField(Game & game, const Coordinates & current_field_size_ = = {5, 5}) : void
+SetupField(Game & game, const json & j) : void
..
+GetName() : Name
+HandleCommand(input::Command command) : void
-Render() const : void
+operator basic_json() const : json
__
-current_field_size_ : Coordinates
{static} +kName : const Name
}
class "states::PlayerMove" as C_0002747334072488156309
class C_0002747334072488156309 {
+PlayerMove(Game & game) : void
+PlayerMove(Game & game, const json & j) : void
..
-Attack() const : void
+GetName() : Name
+HandleCommand(input::Command command) : void
-MoveCursor(input::Command command) const : void
-Render() const : void
-UseAbility() const : void
+operator basic_json() const : json
__
-bot_player_ : BotPlayer &
-human_player_ : HumanPlayer &
{static} +kName : const Name
}
class "states::SetupShipsLengths" as C_0000928909357383305865
class C_0000928909357383305865 {
+SetupShipsLengths(Game & game, const std::vector<uint8_t> & ship_sizes = =
                                 {entities::Ship::kMinShipLength}, size_t selected_ship_index = 0) : void
+SetupShipsLengths(Game & game, const json & j) : void
..
-CountOccupiedCells() const : uint32_t
+GetName() : Name
+HandleCommand(input::Command command) : void
-Render() const : void
+operator basic_json() const : json
__
-cells_ : const uint32_t
{static} +kName : const Name
-selected_ship_index_ : size_t
-ship_sizes_ : std::vector<uint8_t>
}
class "states::PlaceShips" as C_0012036416191031271030
class C_0012036416191031271030 {
+PlaceShips(Game & game, size_t current_ship_index = 0, entities::Ship::Orientation selected_orientation = entities::Ship::Orientation::VERTICAL, const Coordinates & selected_position = = {0, 0}) : void
+PlaceShips(Game & game, const json & j) : void
..
+GetName() : Name
+HandleCommand(input::Command command) : void
-Render() const : void
+operator basic_json() const : json
__
-current_ship_ : entities::ShipManager::iterator
-game_field_ : entities::GameField &
{static} +kName : const Name
-selected_orientation_ : entities::Ship::Orientation
-selected_position_ : Coordinates
}
class "states::BotMove" as C_0008011199469677950671
class C_0008011199469677950671 {
+BotMove(Game & game, bool did_make_move = false) : void
+BotMove(Game & game, const json & j) : void
..
+GetName() : Name
+HandleCommand(input::Command command) : void
-MakeMove() const : void
-Render() const : void
+operator basic_json() const : json
__
-bot_player_ : BotPlayer &
-did_make_move_ : bool
-human_player_ : HumanPlayer &
{static} +kName : const Name
}
C_0015764854148892732305 <|-- C_0002674565606331333902

C_0015764854148892732305 <|-- C_0011306398176730384307

C_0015764854148892732305 <|-- C_0002747334072488156309

C_0015764854148892732305 <|-- C_0000928909357383305865

C_0015764854148892732305 <|-- C_0012036416191031271030

C_0015764854148892732305 <|-- C_0008011199469677950671


'Generated with clang-uml, version 972dbea
'LLVM version Ubuntu clang version 19.1.1 (1ubuntu1)
@enduml
